language/move-prover/tests/sources/functional/consts.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/consts.move:29:9 ───
    │
 29 │         ensures !result.b;
    │         ^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/consts.move:23:5: init_incorrect
    =         result = <redacted>
    =     at tests/sources/functional/consts.move:24:9: init_incorrect
    =     at tests/sources/functional/consts.move:23:5: init_incorrect
